<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBarDetailMovies"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".movies.DetailMovieActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".movies.DetailMovieActivity">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:context=".movies.DetailMovieActivity">

                        <ImageView
                            android:id="@+id/coverImage"
                            android:layout_width="150dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:padding="0dp"
                            android:translationY="20dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="3"
                        android:orientation="vertical"
                        android:translationY="20dp">
                        <CheckBox
                            android:id="@+id/starMovies"
                            style="?android:attr/starStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="@+id/coverImage"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/lbl_title"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="14sp"
                                android:gravity="end"
                                android:text="@string/title3"
                                android:textColor="#ff000000"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_title"
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="12sp"
                                android:paddingStart="8dp"
                                android:singleLine="false"
                                android:text="@string/textview"
                                android:textColor="#ff000000"
                                android:textStyle="normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/lbl_director"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="14sp"
                                android:gravity="end"
                                android:text="@string/director"
                                android:textColor="#ff000000"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_director"
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="12sp"
                                android:paddingStart="8dp"
                                android:singleLine="false"
                                android:text="@string/textview"
                                android:textColor="#ff000000"
                                android:textStyle="normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/lbl_category"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="14sp"
                                android:gravity="end"
                                android:text="@string/rating"
                                android:textColor="#ff000000"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_category_movie"
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="12sp"
                                android:paddingStart="8dp"
                                android:singleLine="false"
                                android:text="@string/textview"
                                android:textColor="#ff000000"
                                android:textStyle="normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/lbl_genre"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="14sp"
                                android:gravity="end"
                                android:text="@string/genre"
                                android:textColor="#ff000000"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_genre"
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="12sp"
                                android:paddingStart="8dp"
                                android:singleLine="false"
                                android:text="@string/textview"
                                android:textColor="#ff000000"
                                android:textStyle="normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/lbl_year"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="14sp"
                                android:gravity="end"
                                android:text="@string/released"
                                android:textColor="#ff000000"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_year"
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="12sp"
                                android:paddingStart="8dp"
                                android:singleLine="false"
                                android:text="@string/textview"
                                android:textColor="#ff000000"
                                android:textStyle="normal" />
                        </LinearLayout>
                    </LinearLayout>

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/film_synopsis"
                android:textColor="#ff000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/table" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="16sp"
                android:justificationMode="inter_word"
                android:textColor="#ff000000"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="10dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>