<resources>
    <string name="app_name">Submission1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cover">COVER</string>
    <string name="movies">MOVIES</string>
    <string name="series">TV SERIES</string>
    <string name="title_activity_detail_data">DetailData</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="category">Category :</string>
    <string name="title">Title :</string>
    <string name="film_synopsis">Film Synopsis</string>
    <string name="director">Directors :</string>
    <string name="textview">TextView</string>
    <string name="title3">Title :</string>
    <string name="genre">Genre :</string>
    <string name="released">Released :</string>
    <string name="logo">logo</string>
    <string name="rating">Rating :</string>
    <string name="sort">Order by:</string>
    <string name="favorite">Favorite</string>
    <string name="recycleview">RecycleView</string>
    <string name="no_data_image">no_data_image</string>
</resources>